@@ -177,10 +177,12 @@
     <Compile Include="Library\ScriptResourceWriter.cs" />
     <Compile Include="Library\Web\BasicWebCrawler.cs" />
     <Compile Include="Library\Web\Java\InvokeWebServiceArguments.cs" />
+    <Compile Include="Library\Web\SimpleMethodInfo.cs" />
     <Compile Include="Library\Web\SimpleParameterInfo.cs" />
     <Compile Include="Library\Web\PHP\WebServiceServlet.cs" />
     <Compile Include="Library\Web\SmartStreamReader.cs" />
     <Compile Include="Library\Web\Java\WebServiceServlet.cs" />
+    <Compile Include="Library\Web\WSDLProvider.cs" />
     <Compile Include="Library\WriteToProvider.cs" />
     <Compile Include="Library\TextualUserControlProvider.DefineLabel.cs" />
     <Compile Include="Library\TextualUserControlProvider.DefineTextbox.cs" />
